tests/baselines/reference/ModuleAndClassWithSameNameAndCommonRoot.errors.txt
classPoint.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classPoint.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(2,19): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
simple.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
simple.ts(1,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
simple.ts(2,31): error TS2449: Class 'A' used before its declaration.


==== module.ts (4 errors) ====
    module X.Y {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module Point {
                      ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                      ~~~~~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
            export var Origin = new Point(0, 0);
        }
    }
    
==== classPoint.ts (2 errors) ====
    module X.Y {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        // duplicate identifier
        export class Point {
            constructor(x: number, y: number) {
                this.x = x;
                this.y = y;
            }
            x: number;
            y: number;
        }
    }
    
==== simple.ts (3 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
        export var Instance = new A();
                                  ~
!!! error TS2449: Class 'A' used before its declaration.
!!! related TS2728 simple.ts:6:7: 'A' is declared here.
    }
    
    // duplicate identifier
    class A {
        id: string;
    }
    